# daydream

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.in  daydream-config.in  daydream.cfg  daydream.m4  daydream.sh  ddlogin.in  secure.sh.in
batch/: Makefile.am
bulletins/: Makefile.am
configs/: Makefile.am  server.cfg  tosser.cfg
configs/ddtop_designs/: Makefile.am
data/: Makefile.am
ddftp/: COPYRIGHT  Makefile.am  ddftp.h  ddftpd.c
ddfv/: Makefile.am  dirlist.cc  extract.cc
ddsnoop/: Makefile.am
ddz/: Makefile.am  ddrz.c  ddsz.c
display/: Makefile.am  strings.001
display/iso/: Makefile.am  edituser.gfx  edituser.txt  msgreadcommands.gfx  msgreadcommands.txt
docs/: FAQ  HISTORY  HOWTO-dosdoor  HOWTO-ftp  HOWTO-telnet  Makefile.am  README.FreeBSD  README.Linux  README.OpenBSD  README.Solaris  README.y2k  SECURITY  TODO  UPDATING  libdd.doc  menus.txt
docs/html/: config.html  fidonet.html  intro.html  other.html  setup.html  sysopcmds.html  utils.html
doors/: Makefile.am  dded.c  grab.c  new.c
hydracom/: Makefile.am  mycurses.h.in  unix.c
lib/: Makefile.am  ddcommon.h  ddlib.h  ddutmpx.h  libdd.c  libddcommon.c  setenv.c  strlcat.c  strlcpy.c  testlib.c  unsetenv.c  vasprintf.c
main/: Makefile.am  daydream.c  daydream.h  dd.h  doorport.c  download.c  edituser.c  enterbbs.c  entermsg.c  filelist.c  ftpul.c  goodbye.c  hdr.h  hotkey.c  mailscan.c  menus.c  misc.c  readmsgs.c  replymsg.c  stdiohan.c  strf.h  tagedit.c  textsearch.c  typetext.c  unix.c  upload.c  usered.c  version.c  who.c
python/: Makefile.am  _dd.c  dd.py
python/examples/: Makefile.am
questionnaire/: Makefile.am
scripts/: Makefile.am  README  cfg2dbinds  clean.pl  desc.pl  fix.sh  longtoshort.pl  update-2.06-to-2.07
server/: Makefile.am  README  config.c  data.h  lists.c  main.c
telnetd/: Makefile.am  ext.h  state.c  sys_term.c  telnetd.c  telnetd.h  utility.c
utils/: Makefile.am  ddcfg.c  fixbases.c  msgbaseopt.c  pcb2ansi.c  robowriter.c  strconv  tosser.c  yelld.c
