SUBDIRS = ddtop_designs

configsdir = $(datadir)/configs
configs_DATA = dd-conftop.cfg dd-grab.cfg ddtop.script dreamfaker.cfg \
	       dreamnew.cfg modem1.cfg server.cfg tosser.cfg

EXTRA_DIST = dd-conftop.cfg dd-grab.cfg ddtop.script dreamfaker.cfg \
	     dreamnew.cfg modem1.cfg server.cfg tosser.cfg
