SUBDIRS = html

docdir = $(prefix)/docs

doc_DATA = FAQ HISTORY HOWTO-dosdoor HOWTO-ftp HOWTO-telnet \
	   README.FreeBSD README.Linux README.OpenBSD README.syslog \
	   README.y2k TODO UPDATING libdd.doc menus.txt SECURITY \
	   README.archivers README.Solaris

EXTRA_DIST = FAQ HISTORY HOWTO-dosdoor HOWTO-ftp HOWTO-telnet \
	     README.FreeBSD README.Linux README.OpenBSD README.syslog \
	     README.y2k TODO UPDATING libdd.doc menus.txt SECURITY \
	     README.archivers README.Solaris
