topdsgndir = $(datadir)/configs/ddtop_designs
topdsgn_DATA = bobocalls1.dsg bobodlbytes1.dsg bobodlfiles1.dsg \
               bobomsgs1.dsg boboulbytes1.dsg boboulfiles1.dsg \
	       bobowcalls1.dsg bobowdlbytes1.dsg bobowdlfiles1.dsg \
	       bobowmsgs1.dsg bobowulbytes1.dsg bobowulfiles1.dsg

EXTRA_DIST = bobocalls1.dsg bobodlbytes1.dsg bobodlfiles1.dsg \
             bobomsgs1.dsg boboulbytes1.dsg boboulfiles1.dsg \
	     bobowcalls1.dsg bobowdlbytes1.dsg bobowdlfiles1.dsg \
	     bobowmsgs1.dsg bobowulbytes1.dsg bobowulfiles1.dsg
