isodir = $(datadir)/display/iso
iso_DATA = banner.gfx banner.txt commands.gfx commands.txt		     \
	   ddcallers.gfx ddcallers.txt ddcallersheader.gfx		     \
	   ddcallersheader.txt download.gfx download.txt edituser.gfx 	     \
	   edituser.txt filecatalogs.gfx filecatalogs.txt goodbye.gfx 	     \
	   goodbye.txt joinconference.gfx joinconference.txt linechatoff.gfx \
	   linechatoff.txt linechaton.gfx linechaton.txt lineedcommands.gfx  \
	   lineedcommands.txt morecmds.gfx morecmds.txt msgreadcommands.gfx  \
	   msgreadcommands.txt newuser.gfx newuser.txt pagesysop.gfx	     \
	   pagesysop.txt protocols.gfx protocols.txt upload.gfx upload.txt   \
	   uploadcommands.gfx uploadcommands.txt welcome.gfx welcome.txt     \
	   doorpasswdshell.gfx doorpasswdshell.txt

EXTRA_DIST = banner.gfx banner.txt commands.gfx commands.txt		     \
	     ddcallers.gfx ddcallers.txt ddcallersheader.gfx		     \
	     ddcallersheader.txt download.gfx download.txt edituser.gfx	     \
 	     edituser.txt filecatalogs.gfx filecatalogs.txt goodbye.gfx	     \
  	     goodbye.txt joinconference.gfx joinconference.txt linechatoff.gfx \
	     linechatoff.txt linechaton.gfx linechaton.txt lineedcommands.gfx  \
	     lineedcommands.txt morecmds.gfx morecmds.txt msgreadcommands.gfx  \
	     msgreadcommands.txt newuser.gfx newuser.txt pagesysop.gfx	     \
	     pagesysop.txt protocols.gfx protocols.txt upload.gfx upload.txt   \
	     uploadcommands.gfx uploadcommands.txt welcome.gfx welcome.txt   \
	     doorpasswdshell.gfx doorpasswdshell.txt
